#KB-9642 add test case for all module and in notifcation service message take a as a object instead of string parse in all method